--- a/_includes/cv/skills.html
+++ b/_includes/cv/skills.html
@@ -1,20 +1,27 @@
 {% if cv.skills %}
   <div id="skills" class="entry">
-    <header class="entry-header">
-      <h3 class="entry-title">{{ site.data.theme.t.cv_skills | default: 'Skills' }}</h3>
-    </header>
+    
 
     <div class="entry-content">
-      {% for s in cv.skills %}
-        <div class="taxonomy">
-          {% if s.name %}
-            <h4 class="title">{{ s.name }}</h4>
-          {% endif %}
-          {% if s.keywords %}
-            <span class="keywords">{{ s.keywords | array_to_sentence_string }}</span>
-          {% endif %}
-        </div>
+      {% assign skill_groups = cv.skills | group_by:"category" %}
+      {% for grp in skill_groups %}
+        <header class="entry-header">
+          <h3 class="entry-title">{{ grp.name }}</h3>
+        </header>
+        <ul>
+        {% for s in grp.items %}
+          <li>
+            {% if s.name %}
+              <strong>{{ s.name }}</strong>
+            {% endif %}
+            {% if s.time %}
+              <span class="keywords">{{ s.time }}</span>
+            {% endif %}
+          </li>
+        {% endfor %}
+        </ul>
       {% endfor %}
+      
     </div>
   </div>
 {% endif %}
