adds footer note

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,6 +6,7 @@
       {% else %}
         <p>&copy; {{ site.time | date: '%Y' }} {{ site.title }}.</p>
       {% endif %}
+      <p>{{ site.footer_notes }}</p>
     </div>
   </div>
 </footer>
