--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -16,7 +16,7 @@
       {% if my_page.title %}
         <li class="menu-item">
           <a href="{{ my_page.url | relative_url }}" itemprop="url">
-            <span itemprop="name">{{ my_page.title | escape }}</span>
+             <span itemprop="name">{{  (my_page.short_title | default: my_page.title)  | escape }}</span>
           </a>
         </li>
       {% endif %}
